wwpdb/utils/nmr/mr/GromacsPTParser.py
# Generated from GromacsPTParser.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GromacsPTParser ( Parser ):

    grammarFileName = "GromacsPTParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "']'", "'default'", "'moleculetype'", 
                     "'atomtypes'", "'pairtypes'", "'bondtypes'", "'angletypes'", 
                     "'dihedraltypes'", "'constrainttypes'", "'nonbond_params'", 
                     "'atoms'", "'bonds'", "'pairs'", "'pairs_nb'", "'angles'", 
                     "'dihedrals'", "'exclusions'", "'constraints'", "'settles'", 
                     "'virtual_sites1'", "'virtual_sites2'", "'virtual_sites3'", 
                     "'virtual_sites4'", "'virtual_sitesn'", "'system'", 
                     "'molecules'" ]

    symbolicNames = [ "<INVALID>", "L_brkt", "R_brkt", "Default", "Moleculetype", 
                      "Atomtypes", "Pairtypes", "Bondtypes", "Angletypes", 
                      "Dihedraltypes", "Constrainttypes", "Nonbond_params", 
                      "Atoms", "Bonds", "Pairs", "Pairs_nb", "Angles", "Dihedrals", 
                      "Exclusions", "Constraints", "Settles", "Virtual_sites1", 
                      "Virtual_sites2", "Virtual_sites3", "Virtual_sites4", 
                      "Virtual_sitesn", "System", "Molecules", "Integer", 
                      "Real", "SHARP_COMMENT", "EXCLM_COMMENT", "SMCLN_COMMENT", 
                      "Simple_name", "SPACE", "COMMENT", "SECTION_COMMENT", 
                      "LINE_COMMENT", "R_brkt_A", "SECTION_COMMENT_A", "LINE_COMMENT_A", 
                      "Simple_name_A", "SPACE_A", "RETURN_A" ]

    RULE_gromacs_pt = 0
    RULE_default_statement = 1
    RULE_moleculetype_statement = 2
    RULE_moleculetype = 3
    RULE_atomtypes_statement = 4
    RULE_atomtypes = 5
    RULE_pairtypes_statement = 6
    RULE_pairtypes = 7
    RULE_bondtypes_statement = 8
    RULE_bondtypes = 9
    RULE_angletypes_statement = 10
    RULE_angletypes = 11
    RULE_dihedraltypes_statement = 12
    RULE_dihedraltypes = 13
    RULE_constrainttypes_statement = 14
    RULE_constrainttypes = 15
    RULE_nonbonded_params_statement = 16
    RULE_nonbonded_params = 17
    RULE_atoms_statement = 18
    RULE_atoms = 19
    RULE_bonds_statement = 20
    RULE_bonds = 21
    RULE_pairs_statement = 22
    RULE_pairs = 23
    RULE_pairs_nb_statement = 24
    RULE_pairs_nb = 25
    RULE_angles_statement = 26
    RULE_angles = 27
    RULE_dihedrals_statement = 28
    RULE_dihedrals = 29
    RULE_exclusions_statement = 30
    RULE_exclusions = 31
    RULE_constraints_statement = 32
    RULE_constraints = 33
    RULE_settles_statement = 34
    RULE_settles = 35
    RULE_virtual_sites1_statement = 36
    RULE_virtual_sites1 = 37
    RULE_virtual_sites2_statement = 38
    RULE_virtual_sites2 = 39
    RULE_virtual_sites3_statement = 40
    RULE_virtual_sites3 = 41
    RULE_virtual_sites4_statement = 42
    RULE_virtual_sites4 = 43
    RULE_virtual_sitesn_statement = 44
    RULE_virtual_sitesn = 45
    RULE_system_statement = 46
    RULE_molecules_statement = 47
    RULE_molecules = 48
    RULE_number = 49

    ruleNames =  [ "gromacs_pt", "default_statement", "moleculetype_statement", 
                   "moleculetype", "atomtypes_statement", "atomtypes", "pairtypes_statement", 
                   "pairtypes", "bondtypes_statement", "bondtypes", "angletypes_statement", 
                   "angletypes", "dihedraltypes_statement", "dihedraltypes", 
                   "constrainttypes_statement", "constrainttypes", "nonbonded_params_statement", 
                   "nonbonded_params", "atoms_statement", "atoms", "bonds_statement", 
                   "bonds", "pairs_statement", "pairs", "pairs_nb_statement", 
                   "pairs_nb", "angles_statement", "angles", "dihedrals_statement", 
                   "dihedrals", "exclusions_statement", "exclusions", "constraints_statement", 
                   "constraints", "settles_statement", "settles", "virtual_sites1_statement", 
                   "virtual_sites1", "virtual_sites2_statement", "virtual_sites2", 
                   "virtual_sites3_statement", "virtual_sites3", "virtual_sites4_statement", 
                   "virtual_sites4", "virtual_sitesn_statement", "virtual_sitesn", 
                   "system_statement", "molecules_statement", "molecules", 
                   "number" ]

    EOF = Token.EOF
    L_brkt=1
    R_brkt=2
    Default=3
    Moleculetype=4
    Atomtypes=5
    Pairtypes=6
    Bondtypes=7
    Angletypes=8
    Dihedraltypes=9
    Constrainttypes=10
    Nonbond_params=11
    Atoms=12
    Bonds=13
    Pairs=14
    Pairs_nb=15
    Angles=16
    Dihedrals=17
    Exclusions=18
    Constraints=19
    Settles=20
    Virtual_sites1=21
    Virtual_sites2=22
    Virtual_sites3=23
    Virtual_sites4=24
    Virtual_sitesn=25
    System=26
    Molecules=27
    Integer=28
    Real=29
    SHARP_COMMENT=30
    EXCLM_COMMENT=31
    SMCLN_COMMENT=32
    Simple_name=33
    SPACE=34
    COMMENT=35
    SECTION_COMMENT=36
    LINE_COMMENT=37
    R_brkt_A=38
    SECTION_COMMENT_A=39
    LINE_COMMENT_A=40
    Simple_name_A=41
    SPACE_A=42
    RETURN_A=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Gromacs_ptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GromacsPTParser.EOF, 0)

        def default_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Default_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Default_statementContext,i)


        def moleculetype_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Moleculetype_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Moleculetype_statementContext,i)


        def atomtypes_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Atomtypes_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Atomtypes_statementContext,i)


        def pairtypes_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Pairtypes_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Pairtypes_statementContext,i)


        def bondtypes_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Bondtypes_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Bondtypes_statementContext,i)


        def angletypes_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Angletypes_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Angletypes_statementContext,i)


        def dihedraltypes_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Dihedraltypes_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Dihedraltypes_statementContext,i)


        def constrainttypes_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Constrainttypes_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Constrainttypes_statementContext,i)


        def nonbonded_params_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Nonbonded_params_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Nonbonded_params_statementContext,i)


        def atoms_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Atoms_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Atoms_statementContext,i)


        def bonds_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Bonds_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Bonds_statementContext,i)


        def pairs_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Pairs_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Pairs_statementContext,i)


        def pairs_nb_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Pairs_nb_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Pairs_nb_statementContext,i)


        def angles_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Angles_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Angles_statementContext,i)


        def dihedrals_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Dihedrals_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Dihedrals_statementContext,i)


        def exclusions_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Exclusions_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Exclusions_statementContext,i)


        def constraints_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Constraints_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Constraints_statementContext,i)


        def settles_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Settles_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Settles_statementContext,i)


        def virtual_sites1_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Virtual_sites1_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Virtual_sites1_statementContext,i)


        def virtual_sites2_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Virtual_sites2_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Virtual_sites2_statementContext,i)


        def virtual_sites3_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Virtual_sites3_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Virtual_sites3_statementContext,i)


        def virtual_sites4_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Virtual_sites4_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Virtual_sites4_statementContext,i)


        def virtual_sitesn_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Virtual_sitesn_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Virtual_sitesn_statementContext,i)


        def system_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.System_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.System_statementContext,i)


        def molecules_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.Molecules_statementContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.Molecules_statementContext,i)


        def getRuleIndex(self):
            return GromacsPTParser.RULE_gromacs_pt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGromacs_pt" ):
                listener.enterGromacs_pt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGromacs_pt" ):
                listener.exitGromacs_pt(self)




    def gromacs_pt(self):

        localctx = GromacsPTParser.Gromacs_ptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_gromacs_pt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GromacsPTParser.L_brkt:
                self.state = 125
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 100
                    self.default_statement()
                    pass

                elif la_ == 2:
                    self.state = 101
                    self.moleculetype_statement()
                    pass

                elif la_ == 3:
                    self.state = 102
                    self.atomtypes_statement()
                    pass

                elif la_ == 4:
                    self.state = 103
                    self.pairtypes_statement()
                    pass

                elif la_ == 5:
                    self.state = 104
                    self.bondtypes_statement()
                    pass

                elif la_ == 6:
                    self.state = 105
                    self.angletypes_statement()
                    pass

                elif la_ == 7:
                    self.state = 106
                    self.dihedraltypes_statement()
                    pass

                elif la_ == 8:
                    self.state = 107
                    self.constrainttypes_statement()
                    pass

                elif la_ == 9:
                    self.state = 108
                    self.nonbonded_params_statement()
                    pass

                elif la_ == 10:
                    self.state = 109
                    self.atoms_statement()
                    pass

                elif la_ == 11:
                    self.state = 110
                    self.bonds_statement()
                    pass

                elif la_ == 12:
                    self.state = 111
                    self.pairs_statement()
                    pass

                elif la_ == 13:
                    self.state = 112
                    self.pairs_nb_statement()
                    pass

                elif la_ == 14:
                    self.state = 113
                    self.angles_statement()
                    pass

                elif la_ == 15:
                    self.state = 114
                    self.dihedrals_statement()
                    pass

                elif la_ == 16:
                    self.state = 115
                    self.exclusions_statement()
                    pass

                elif la_ == 17:
                    self.state = 116
                    self.constraints_statement()
                    pass

                elif la_ == 18:
                    self.state = 117
                    self.settles_statement()
                    pass

                elif la_ == 19:
                    self.state = 118
                    self.virtual_sites1_statement()
                    pass

                elif la_ == 20:
                    self.state = 119
                    self.virtual_sites2_statement()
                    pass

                elif la_ == 21:
                    self.state = 120
                    self.virtual_sites3_statement()
                    pass

                elif la_ == 22:
                    self.state = 121
                    self.virtual_sites4_statement()
                    pass

                elif la_ == 23:
                    self.state = 122
                    self.virtual_sitesn_statement()
                    pass

                elif la_ == 24:
                    self.state = 123
                    self.system_statement()
                    pass

                elif la_ == 25:
                    self.state = 124
                    self.molecules_statement()
                    pass


                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(GromacsPTParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Default_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_brkt(self):
            return self.getToken(GromacsPTParser.L_brkt, 0)

        def Default(self):
            return self.getToken(GromacsPTParser.Default, 0)

        def R_brkt(self):
            return self.getToken(GromacsPTParser.R_brkt, 0)

        def Integer(self, i:int=None):
            if i is None:
                return self.getTokens(GromacsPTParser.Integer)
            else:
                return self.getToken(GromacsPTParser.Integer, i)

        def Simple_name(self, i:int=None):
            if i is None:
                return self.getTokens(GromacsPTParser.Simple_name)
            else:
                return self.getToken(GromacsPTParser.Simple_name, i)

        def Real(self, i:int=None):
            if i is None:
                return self.getTokens(GromacsPTParser.Real)
            else:
                return self.getToken(GromacsPTParser.Real, i)

        def getRuleIndex(self):
            return GromacsPTParser.RULE_default_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefault_statement" ):
                listener.enterDefault_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefault_statement" ):
                listener.exitDefault_statement(self)




    def default_statement(self):

        localctx = GromacsPTParser.Default_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_default_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(GromacsPTParser.L_brkt)
            self.state = 133
            self.match(GromacsPTParser.Default)
            self.state = 134
            self.match(GromacsPTParser.R_brkt)
            self.state = 135
            self.match(GromacsPTParser.Integer)
            self.state = 136
            self.match(GromacsPTParser.Integer)
            self.state = 137
            self.match(GromacsPTParser.Simple_name)
            self.state = 138
            self.match(GromacsPTParser.Real)
            self.state = 139
            self.match(GromacsPTParser.Real)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GromacsPTParser.Simple_name:
                self.state = 140
                self.match(GromacsPTParser.Simple_name)
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Moleculetype_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_brkt(self):
            return self.getToken(GromacsPTParser.L_brkt, 0)

        def Moleculetype(self):
            return self.getToken(GromacsPTParser.Moleculetype, 0)

        def R_brkt(self):
            return self.getToken(GromacsPTParser.R_brkt, 0)

        def moleculetype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.MoleculetypeContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.MoleculetypeContext,i)


        def getRuleIndex(self):
            return GromacsPTParser.RULE_moleculetype_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMoleculetype_statement" ):
                listener.enterMoleculetype_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMoleculetype_statement" ):
                listener.exitMoleculetype_statement(self)




    def moleculetype_statement(self):

        localctx = GromacsPTParser.Moleculetype_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_moleculetype_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(GromacsPTParser.L_brkt)
            self.state = 147
            self.match(GromacsPTParser.Moleculetype)
            self.state = 148
            self.match(GromacsPTParser.R_brkt)
            self.state = 150 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 149
                self.moleculetype()
                self.state = 152 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==GromacsPTParser.Simple_name):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoleculetypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Simple_name(self):
            return self.getToken(GromacsPTParser.Simple_name, 0)

        def Integer(self):
            return self.getToken(GromacsPTParser.Integer, 0)

        def getRuleIndex(self):
            return GromacsPTParser.RULE_moleculetype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMoleculetype" ):
                listener.enterMoleculetype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMoleculetype" ):
                listener.exitMoleculetype(self)




    def moleculetype(self):

        localctx = GromacsPTParser.MoleculetypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_moleculetype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(GromacsPTParser.Simple_name)
            self.state = 155
            self.match(GromacsPTParser.Integer)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atomtypes_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_brkt(self):
            return self.getToken(GromacsPTParser.L_brkt, 0)

        def Atomtypes(self):
            return self.getToken(GromacsPTParser.Atomtypes, 0)

        def R_brkt(self):
            return self.getToken(GromacsPTParser.R_brkt, 0)

        def atomtypes(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.AtomtypesContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.AtomtypesContext,i)


        def getRuleIndex(self):
            return GromacsPTParser.RULE_atomtypes_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomtypes_statement" ):
                listener.enterAtomtypes_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomtypes_statement" ):
                listener.exitAtomtypes_statement(self)




    def atomtypes_statement(self):

        localctx = GromacsPTParser.Atomtypes_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_atomtypes_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(GromacsPTParser.L_brkt)
            self.state = 158
            self.match(GromacsPTParser.Atomtypes)
            self.state = 159
            self.match(GromacsPTParser.R_brkt)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GromacsPTParser.Simple_name:
                self.state = 160
                self.atomtypes()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomtypesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Simple_name(self):
            return self.getToken(GromacsPTParser.Simple_name, 0)

        def Integer(self, i:int=None):
            if i is None:
                return self.getTokens(GromacsPTParser.Integer)
            else:
                return self.getToken(GromacsPTParser.Integer, i)

        def Real(self, i:int=None):
            if i is None:
                return self.getTokens(GromacsPTParser.Real)
            else:
                return self.getToken(GromacsPTParser.Real, i)

        def getRuleIndex(self):
            return GromacsPTParser.RULE_atomtypes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomtypes" ):
                listener.enterAtomtypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomtypes" ):
                listener.exitAtomtypes(self)




    def atomtypes(self):

        localctx = GromacsPTParser.AtomtypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atomtypes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(GromacsPTParser.Simple_name)
            self.state = 167
            self.match(GromacsPTParser.Integer)
            self.state = 168
            self.match(GromacsPTParser.Real)
            self.state = 169
            self.match(GromacsPTParser.Real)
            self.state = 170
            self.match(GromacsPTParser.Integer)
            self.state = 171
            self.match(GromacsPTParser.Real)
            self.state = 172
            self.match(GromacsPTParser.Real)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pairtypes_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_brkt(self):
            return self.getToken(GromacsPTParser.L_brkt, 0)

        def Pairtypes(self):
            return self.getToken(GromacsPTParser.Pairtypes, 0)

        def R_brkt(self):
            return self.getToken(GromacsPTParser.R_brkt, 0)

        def pairtypes(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GromacsPTParser.PairtypesContext)
            else:
                return self.getTypedRuleContext(GromacsPTParser.PairtypesContext,i)


        def getRuleIndex(self):
            return GromacsPTParser.RULE_pairtypes_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPairtypes_statement" ):
                listener.enterPairtypes_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPairtypes_statement" ):
                listener.exitPairtypes_statement(self)




    def pairtypes_statement(self):

        localctx = GromacsPTParser.Pairtypes_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_pairtypes_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(GromacsPTParser.L_brkt)
            self.state = 175
            self.match(GromacsPTParser.Pairtypes)
            self.state = 176
            self.match(GromacsPTParser.R_brkt)
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GromacsPTParser.Simple_name:
                self.state = 177
                self.pairtypes()
                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

